--- a/app/.env
+++ b/app/.env
@@ -27,3 +27,7 @@ APP_SECRET=bd29b4e3de616982541c8c9e9727699a
  DATABASE_URL="mysql://symfony:symfony@database:3306/pokemon-tournament?serverVersion=8.0&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
